--- a/config/database.yml
+++ b/config/database.yml
@@ -8,11 +8,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
-  timeout: 5000
-  username: danielosbaldo
-  password: 123tamarindo
-  host: medicapidb.cafkoetbrrnh.us-west-2.rds.amazonaws.com
-  port: 3306
+  username: postgres
+  password: xen74res
+  host: localhost
+  port: 5432
 
 development:
   <<: *default
